 * Fuzzy finders (e.g. find file) ignore spaces. (Tomasz Wegrzanowski)
 * Highlighting the current file in the project tree is now optional and is in the Project menu (Delisa Mason)
 * Document Search is now incremental (Delisa Mason)
 * REPL Enhancements, including commit on Return (Delisa Mason)
 * Mirah syntax checking (Michal Hantl)
 * More keybindings for adjusting views, such as changing font size, notebook width, and focussed tree (Delisa Mason)

Bugfixes:

 * TitleCase now works when the selected text has capital letters in it (Delisa Mason)
 * Go to Declaration is only available when a project is open (Delisa Mason)
 * Saving a file prompts before overwriting (Delisa Mason)
 * Encrypt/Decrypt does not happen if a user cancels (Utkarsh Kukreti)

New APIs:

 * Non-modal text,list, and browser dialogs in Application::Dialog

Version 0.9.1 (2 December 2010)
===============================

 * Move rhino mirror (Dan Lucraft)

Version 0.9 (25 November 2010)
==============================

Enhancements:

 * Vertical tree tabs now have a close button like edit view tabs (Tim Felgentreff)
 * Strip Trailing Spaces is now _much_ faster (Tim Felgentreff)
 * "Online Help" and "Submit a Bug" open the default system browser (Johannes Wollert)
 * -l command line switch to jump to a file number (Johannes Wollert)
 * Font and Theme dialogs now update the setting on selection change for instant feedback (Tim Felgentreff)
 * Tabs now display an alert icon if the underlying file is unwritable (Delisa Mason)
 * Browser bar URL field now supports project-relative paths (Delisa Mason)
 * URLs can be opened in the internal browser or the OS-default based on preferences (Delisa Mason)
 * Syntax checking for Groovy (Delisa Mason)
 * Jump to declaration for Groovy (Delisa Mason)
 * Margin is drawn with a line or a shaded area (Tim Felgentreff)
 * Syntax checking for JavaScript (Delisa Mason)
 * Word wrap wraps at the margin column (Daniel Lucraft)